--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-Django==2.0
-psycopg2
-django-debug-toolbar
-django-toolbelt
-whitenoise
+aniso8601==3.0.2
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==2.1.1
+django-debug-toolbar==1.10.1
+django-toolbelt==0.0.1
+graphene==2.1.3
+graphql-core==2.1
+graphql-relay==0.4.5
+gunicorn==19.9.0
+promise==2.1
+psycopg2==2.7.5
+pytz==2018.5
+Rx==1.6.1
+six==1.11.0
+sqlparse==0.2.4
+static3==0.7.0
+typing==3.6.6
+whitenoise==4.1
