--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1.1
 django-debug-toolbar==1.10.1
+django-graphiql==0.4.4
 django-toolbelt==0.0.1
 graphene==2.1.3
+graphene-django==2.2.0
 graphql-core==2.1
 graphql-relay==0.4.5
 gunicorn==19.9.0
@@ -12,6 +14,7 @@ promise==2.1
 psycopg2==2.7.5
 pytz==2018.5
 Rx==1.6.1
+singledispatch==3.4.0.3
 six==1.11.0
 sqlparse==0.2.4
 static3==0.7.0
