stagingブランチでのみCircleCIを発動させる

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7
+    branches:
+        only:
+          - staging
     steps:
       - checkout
       - run:
