設定ファイルを再追加(誤ってキャッシュを消しただけなので気にしなくてよい)

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,27 @@
 [tox]
-envlist = flake8
+envlist = py37, flake8
 skipsdist = True
 
+[coverage:report]
+include = montage/**
+omit = montage/*/tests/**
+       montage/*/tests.py
+       montage/*/migrations/*.py
+
+[testenv:py37]
+commands = py.test --cov .
+deps =
+  coverage
+  pytest
+  pytest-cov
+  pytest-django
+
 [testenv:flake8]
+basepython = python3.7
 deps =
     flake8
     pep8-naming
-commands = flake8 {posargs:work}
+commands = flake8 montage/
 
 [flake8]
 max-line-length = 100
@@ -20,3 +35,4 @@ exclude =
     urls.py
     manage.py
     wsgi.py
+    tests/*
