--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aniso8601==3.0.2
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.1.1
+Django==2.1
 django-debug-toolbar==1.10.1
+django-filter==2.0.0
 django-graphiql==0.4.4
 django-toolbelt==0.0.1
 graphene==2.1.3
@@ -10,13 +11,18 @@ graphene-django==2.2.0
 graphql-core==2.1
 graphql-relay==0.4.5
 gunicorn==19.9.0
+pluggy==0.7.1
 promise==2.1
 psycopg2==2.7.5
+py==1.6.0
 pytz==2018.5
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.11.0
 sqlparse==0.2.4
 static3==0.7.0
+toml==0.9.6
+tox==3.3.0
 typing==3.6.6
+virtualenv==16.0.0
 whitenoise==4.1
