--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1
 django-debug-toolbar==1.10.1
+django-environ==0.4.5
 django-filter==2.0.0
 django-graphiql==0.4.4
 django-toolbelt==0.0.1
@@ -26,3 +27,5 @@ tox==3.3.0
 typing==3.6.6
 virtualenv==16.0.0
 whitenoise==4.1
+psycopg2-binary==2.7.5
+django-heroku==0.3.1
