--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37, flake8
+envlist = py37, flake8, mypy
 skipsdist = True
 
 [coverage:report]
@@ -22,6 +22,11 @@ deps =
     flake8
     pep8-naming
 commands = flake8 montage/
+
+[testenv:mypy]
+basepython = python3.7
+deps = mypy
+commands = mypy montage/
 
 [flake8]
 max-line-length = 100
