--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aniso8601==3.0.2
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.1
+Django==2.1.2
 django-debug-toolbar==1.10.1
 django-environ==0.4.5
 django-filter==2.0.0
@@ -29,5 +29,14 @@ virtualenv==16.0.0
 whitenoise==4.1
 psycopg2-binary==2.7.5
 django-heroku==0.3.1
-django-cors-headers
+django-cors-headers==2.4.0
 sentry-sdk==0.3.6
+django-extensions==2.1.3
+django-cleanup==0.1.9
+Werkzeug==0.14.1
+django-jet==1.0.7
+pytest-pythonpath==0.7.3
+pytest==3.8.2
+pytest-django==3.4.3
+factory_boy==2.11.1
+pytest-cov==2.6.0
