pytestでテストを実行可能に変更

--- a/tox.ini
+++ b/tox.ini
@@ -1,43 +1,42 @@
 [tox]
-envlist = py37, flake8, mypy
+envlist = py37, flake8, pytest
 skipsdist = True
 
-[coverage:report]
-include = montage/**
-omit = montage/*/tests/**
-       montage/*/tests.py
-       montage/*/migrations/*.py
-
-[testenv:py37]
-commands = py.test --cov .
+[testenv]
 deps =
-  coverage
-  pytest
-  pytest-cov
-  pytest-django
+  -rrequirements.txt
+
+setenv =
+    PYTHONDONTWRITEBYTECODE = 1
+    DJANGO_SETTINGS_MODULE = montage.settings.dev
 
 [testenv:flake8]
 basepython = python3.7
 deps =
     flake8
-    pep8-naming
-commands = flake8 montage/
+commands = flake8 montage
 
-[testenv:mypy]
-basepython = python3.7
-deps = mypy
-commands = mypy montage/
+[testenv:pytest]
+testpaths = tests
+python_paths = montage
+django_find_project = false
+commands = pytest --verbose --cov=montage/ --cov-report=term-missing
 
 [flake8]
 max-line-length = 100
 max-complexity = 10
 radon-max-cc = 10
 import-order-style = google
-ignore = D100,D101,D102,D103,D200,D202,D203,D204,D205,D208,D209,D210,D300,D301,D302,D400,D402
+ignore = D100,D101,D102,D103,D104,D105,D106,D200,D202,D203,D204,D205,D208,D209,D210,D300,D301,D302,D400,D402,F401,W391
 exclude =
     # auto generated files
     migrations
+    common.py
+    dev.py
+    prod.py
+    django.log
     urls.py
     manage.py
     wsgi.py
     tests/*
+    mypy/*
