--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,5 @@ pytest-django==3.4.3
 factory_boy==2.11.1
 pytest-cov==2.6.0
 djangorestframework==3.8.2
-django-graphql-jwt=
-django-graphql-social-auth=0.1.2
-django-graphql-social-auth[jwt]
+django-graphql-jwt==0.2.0
+django-graphql-social-auth==0.1.2
