--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,6 @@ pytest-cov==2.6.0
 djangorestframework==3.8.2
 django-graphql-jwt==0.2.0
 django-graphql-social-auth==0.1.2
+cloudinary==1.14.0
+django-cloudinary-storage==0.2.3
+Pillow==5.3.0
