--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,5 @@ django-graphql-social-auth==0.1.2
 cloudinary==1.14.0
 django-cloudinary-storage==0.2.3
 Pillow==5.3.0
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
