[Add] refs #21 ユーザ名取得のスナップショットテストの実装

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         build: .
         container_name: montage_web
         env_file: .env
-        command: python manage.py runserver 0.0.0.0:8000
+        command: python manage.py runserver 0.0.0.0:8000 --settings=montage.settings.dev
         volumes:
             - .:/app
         ports:
