--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = montage.settings.common
 testpaths = tests
-python_paths = montage
+python_files = tests.py test_*.py *_tests.py
+python_paths = /app/montage/
