[fix] nginxを利用できるように修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,14 @@ services:
             - "8000:8000"
         depends_on:
             - postgres
+    nginx:
+      container_name: montage_nginx
+      image: nginx
+      ports:
+        - "80:80"
+      volumes:
+        - "./nginx/:/etc/nginx/"
+      depends_on:
+        - web
 volumes:
   postgres:
