--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
             - "8000:8000"
         depends_on:
             - postgres
+        stdin_open: true
+        tty: true
     nginx:
       container_name: montage_nginx
       image: nginx
