--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,19 @@ skipsdist = True
 
 [testenv]
 deps =
-  -rrequirements.txt
+    pluggy==0.11.0
+    pytest==4.5.0
+    pytest-cov==2.6.0
+    pytest-django==3.4.8
+    pytest-pythonpath==0.7.3
+    tox==3.3.0
+    snapshottest==0.5.0
+    factory-boy==2.12.0
+    -rrequirements.txt
 
 setenv =
     PYTHONDONTWRITEBYTECODE = 1
-    DJANGO_SETTINGS_MODULE = montage.settings.dev
+    DJANGO_SETTINGS_MODULE = montage.settings
 
 [testenv:flake8]
 basepython = python3.7
