--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
       container_name: montage_db
       image: postgres:10.5
       environment:
-        DATABASE_NAME:
-        DATABASE_USER:
-        DATABASE_PASSWORD:
+        DB_DATABASE:
+        DB_USERNAME:
+        DB_PASSWORD:
+        DB_HOST:
       ports:
         - "5432:5432"
       volumes:
@@ -16,9 +17,10 @@ services:
         container_name: montage_web
         environment:
           SECRET_KEY:
-          DATABASE_NAME:
-          DATABASE_USER:
-          DATABASE_PASSWORD:
+          DB_DATABASE:
+          DB_USERNAME:
+          DB_PASSWORD:
+          DB_HOST:
           DJANGO_DEBUG:
           DJANGO_LOG_LEVEL:
           PYTHONDEVREQUIRES:
