--- a/example.env
+++ b/example.env
@@ -1,8 +1,9 @@
 SECRET_KEY=
 PYTHONDEVREQUIRES=1
-DATABASE_NAME=montage
-DATABASE_USER=postgres
-DATABASE_PASSWORD=password
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_HOST=postgres
 SOCIAL_AUTH_TWITTER_KEY=
 SOCIAL_AUTH_TWITTER_SECRET=
 MONTAGE_GUNICORN_WORKER=4
