add create share image for ogp function to create impression mutation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
           MONTAGE_GUNICORN_WORKER:
           DJANGO_SETTINGS_MODULE:
           CLOUDINARY_UPLOAD_FOLDER:
+          CLOUDINARY_UPLOAD_SHARE_FOLDER:
           CLOUDINARY_CLOUD_NAME:
           CLOUDINARY_API_KEY:
           CLOUDINARY_API_SECRET:
