--- a/example.env
+++ b/example.env
@@ -9,6 +9,7 @@ SOCIAL_AUTH_TWITTER_SECRET=
 MONTAGE_GUNICORN_WORKER=4
 DJANGO_SETTINGS_MODULE=montage.settings
 CLOUDINARY_UPLOAD_FOLDER=
+CLOUDINARY_UPLOAD_SHARE_FOLDER=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
